# autotools-c-template

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
hooks/: pre-commit
hooks/pre-commit.d/: 02-clang-format.sh
src/: main.c
